--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ log = "0.4.11"
 pretty_env_logger = "0.4.0"
 chrono = "0.4.19"
 serde = "1.0.116"
+humansize = "1.1.0"
+num-format = "0.4.0"
+chrono-humanize = "0.1.1"
