--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -68,7 +68,12 @@ jobs:
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          args: '--ignore-tests'
+          args: '--ignore-tests --out Xml'
+
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
 
   deny:
     name: Deny
